--- a/SimpleChart/en.lproj/MainStoryboard.storyboard
+++ b/SimpleChart/en.lproj/MainStoryboard.storyboard
@@ -11,14 +11,11 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3" customClass="S7GraphView">
+                    <view key="view" contentMode="scaleToFill" id="3" customClass="SimpleChartView">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <outlet property="s7graphView" destination="3" id="fBi-wb-uK0"/>
-                    </connections>
                 </viewController>
             </objects>
         </scene>
@@ -34,6 +31,9 @@
                 <relationship kind="outlet" name="xValuesFormatter" candidateClass="NSFormatter"/>
                 <relationship kind="outlet" name="yValuesFormatter" candidateClass="NSFormatter"/>
             </relationships>
+        </class>
+        <class className="SimpleChartView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SimpleChartView.h"/>
         </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
