--- a/SimpleChart/en.lproj/MainStoryboard.storyboard
+++ b/SimpleChart/en.lproj/MainStoryboard.storyboard
@@ -14,7 +14,7 @@
                     <view key="view" contentMode="scaleToFill" id="3" customClass="SimpleChartView">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="simpleChartView" destination="3" id="An3-uD-IhF"/>
